@@ -1,20 +1,19 @@
 Package: RamiGO
 Type: Package
 Title: AmiGO visualize R interface
-Version: 1.25.1
-Date: 2015-03-13
+Version: 1.26.0
+Date: 2018-01-15
 Author: Markus Schroeder, Daniel Gusenleitner, John Quackenbush, Aedin
         Culhane, Benjamin Haibe-Kains
 Maintainer: Markus Schroeder <markus.schroeder@ucdconnect.ie>
 Description: R interface sending requests to AmiGO visualize,
         retrieving DAG GO trees, parsing GraphViz DOT format files and
-        exporting GML files for Cytoscape. Also uses RCytoscape to
+        exporting GML files for Cytoscape. Deprecated:Also uses RCytoscape to
         interactively display AmiGO trees in Cytoscape.
 License: Artistic-2.0
 LazyLoad: yes
 Depends: gsubfn,methods
-Imports: igraph,RCurl,png,RCytoscape,graph
+Imports: igraph,RCurl,png,graph
 Packaged: 2011-07-11 18:11:40 UTC; mschroed
 biocViews: GO, Visualization, GraphAndNetwork, Classification,
         ThirdPartyClient
-PackageStatus: Deprecated
