@@ -4,7 +4,6 @@ import(methods)
 importFrom(graph,edgeDataDefaults,"edgeDataDefaults<-",nodeDataDefaults,"nodeDataDefaults<-")
 importFrom(igraph,igraph.to.graphNEL,graph.adjacency,E,"E<-",V,"V<-",ecount,vcount,get.edgelist,is.directed)
 importClassesFrom(graph,graphAM,graphNEL,graph)
-importFrom(RCytoscape,CytoscapeWindow,displayGraph,layoutNetwork)
 importFrom(RCurl,postForm)
 importFrom(png,readPNG,writePNG)
 exportClasses(AmigoDot)
