@@ -24,12 +24,12 @@ Markus Schroeder <mschroed@jimmy.harvard.edu>
 }
 \examples{
 ## set GO ID's and color
-goIDs <- c("GO:0051130","GO:0019912","GO:0005783")
-color <- c("lightblue","red","yellow")
-
-dd <- getAmigoTree(goIDs=goIDs,color=color,
-  filename="example",picType="dot",saveResult=FALSE)
-tt <- readAmigoDot(object=dd)
-AmigoDot.to.graphNEL(tt)
+#goIDs <- c("GO:0051130","GO:0019912","GO:0005783")
+#color <- c("lightblue","red","yellow")
+#
+#dd <- getAmigoTree(goIDs=goIDs,color=color,
+#  filename="example",picType="dot",saveResult=FALSE)
+#tt <- readAmigoDot(object=dd)
+#AmigoDot.to.graphNEL(tt)
 }
 
