@@ -37,16 +37,16 @@ Benjamin Haibe-Kains <bhaibeka@jimmy.harvard.edu>
 }
 \examples{
 ## set GO ID's and color
-goIDs <- c("GO:0051130","GO:0019912","GO:0005783")
-color <- c("lightblue","red","yellow")
+#goIDs <- c("GO:0051130","GO:0019912","GO:0005783")
+#color <- c("lightblue","red","yellow")
 
-dd <- getAmigoTree(goIDs=goIDs,color=color,
-  filename="example",picType="dot",saveResult=FALSE)
-tt <- readAmigoDot(object=dd)
+#dd <- getAmigoTree(goIDs=goIDs,color=color,
+#  filename="example",picType="dot",saveResult=FALSE)
+#tt <- readAmigoDot(object=dd)
 
-adjM2gml(adjMatrix(tt),relations(tt)$color,
-  annot(tt)$fillcolor,annot(tt)$GO_ID,
-  annot(tt)$description,"example")
+#adjM2gml(adjMatrix(tt),relations(tt)$color,
+#  annot(tt)$fillcolor,annot(tt)$GO_ID,
+#  annot(tt)$description,"example")
 }
 \keyword{ igraph }
 \keyword{ graph }
